# Deep8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
deep8/: CMakeLists.txt  Deep8.h
deep8/basic/: Basic.h  CPUMemoryPool.h  CudaException.h  CudaHeads.h  Device.h  Exception.h  GPUBasic.h  GPUDevice.h  GPUMemoryAllocator.h  GPUMemoryPool.h  Macro.h  MemoryAllocator.cpp  MemoryAllocator.cu  MemoryAllocator.h  MemoryPool.h  Shape.h  Tensor.cpp  Tensor.cu  Tensor.h  TensorStorage.cpp  TensorStorage.cu  TensorStorage.h  Type.h
deep8/include/: Abs.h  AddScalar.h  AutoBatchCodeHelper.h  Basic.h  Batch.h  DeConv2d.h  Deep8.h  Device.h  Divide.h  DivideScalar.h  EagerExecutor.h  Exception.h  Executor.h  Expression.h  Function.h  GPUBasic.h  GPUElementWise.cuh  GPUElementWise.h  GPUMathUtils.h  GPUReduce.cuh  GPUReduce.h  InputParameter.h  L2Norm.h  LReLu.h  LazyExecutor.h  LearningRateIterator.h  Linear.h  LogSoftmax.h  MatrixMultiply.h  Minus.h  Multiply.h  Node.h  OutputEntry.h  Parameter.h  Pow.h  PreDefinition.h  ReLu.h  ReShape.h  Shape.h  ShapeUtils.h  (+11 more)
deep8/include/basic/: Basic.h  ElementType.h  GPUBasic.h  GPUException.h
deep8/include/math/: AXPBY.h  AXPBYPCZ.h  Abs.h  AdagradUpdate.h  AdamUpdate.h  Add.h  Assign.h  AvgPooling2d.h  Constant.h  Conv2d.h  CrossEntropy.h  DeConv2d.h  Divide.h  Dot.h  Exp.h  GPUBinaryElementWise.h  GPUBinaryReduce.h  GPUMath.h  GPUReduce.h  GPUUnaryElementWise.h  Gaussian.h  L1Distance.h  L1Norm.h  L1NormLoss.h  L2Distance.h  L2Norm.h  L2NormLoss.h  LReLu.h  Linear.h  Log.h  LogSoftmax.h  MatrixMultiply.h  MatrixMultuply.h  MaxIndex2d.h  MaxPooling2d.h  MaxPooling2dWithIndex.h  MaxUnPooling2d.h  Mean.h  MeanLoss.h  Minus.h  (+15 more)
deep8/include/model/: AutoBatchCodeHelper.h  Device.h  EagerExecutor.h  ElementType.h  Executor.h  Expression.h  GPUDevice.h  GPUMemoryAllocator.h  GPUMemoryPool.h  LazyExecutor.h  MemoryAllocator.h  MemoryPool.h  Net.h  OutputEntry.h  Shape.h  Tensor.h  TensorInit.h  TensorStorage.h
deep8/include/nodes/: Abs.h  Add.h  AvgPooling2d.h  Batch.h  Conv2d.h  CrossEntropy.h  DeConv2d.h  Divide.h  Dot.h  Exp.h  Function.h  L1Distance.h  L1Norm.h  L1NormLoss.h  L2Distance.h  L2Norm.h  L2NormLoss.h  LReLu.h  Linear.h  Log.h  LogSoftmax.h  MatrixMultiply.h  MaxPooling2d.h  MaxPooling2dWithIndex.h  MaxUnPooling2d.h  Mean.h  MeanLoss.h  Minus.h  Multiply.h  Node.h  PReLu.h  Parameter.h  ReLu.h  ReShape.h  ReduceMean.h  ReduceSum.h  Sigmoid.h  Softmax.h  Sqrt.h  Square.h  (+4 more)
deep8/include/trainer/: AdagradTrainer.h  AdamTrainer.h  ConstantLearningRateIterator.h  LearningRateIterator.h  LinearDecayLearningRateIterator.h  MomentumTrainer.h  RMSPropTrainer.h  SGDTrainer.h  Trainer.h
deep8/include/utils/: GPUMathUtils.h  MathUtils.h  ShapeUtils.h  TensorUtils.h  TypeUtils.h
deep8/model/: DefaultExecutor.cpp  DefaultExecutor.h  Device.cpp  Executor.cpp  Executor.cu  Executor.h  Expression.h  GPUDevice.cu  GPUMemoryAllocator.cu  GPUMemoryPool.cu  MemoryPool.cpp  PreDefinition.h  Shape.cpp  Tensor.cpp  TensorInit.cpp  TensorInit.cu  TensorInit.h  TensorStorage.cpp  Trainer.cpp  Trainer.cu  Trainer.h
deep8/nodes/: Abs.cpp  Abs.cu  Abs.h  Add.cpp  Add.cu  Add.h  AddScalar.cpp  AddScalar.cu  AddScalar.h  AvgPooling2d.cpp  AvgPooling2d.cu  AvgPooling2d.h  ConstantParameter.cpp  ConstantParameter.h  Conv2d.cpp  Conv2d.cu  Conv2d.h  DeConv2d.cpp  DeConv2d.cu  DeConv2d.h  Divide.cpp  Divide.cu  Divide.h  DivideScalar.cpp  DivideScalar.cu  DivideScalar.h  Exp.cpp  Exp.cu  Exp.h  Function.cpp  Function.h  InputParameter.cpp  InputParameter.h  L1Norm.cpp  L1Norm.cu  L1Norm.h  L2Norm.cpp  L2Norm.cu  L2Norm.h  LReLu.cpp  (+60 more)
deep8/src/basic/: GPUException.cu
deep8/src/math/: AXPBY.cpp  AXPBY.cu  AXPBYPCZ.cpp  AXPBYPCZ.cu  Abs.cpp  Abs.cu  AdagradUpdate.cpp  AdagradUpdate.cu  AdamUpdate.cpp  AdamUpdate.cu  Add.cpp  Add.cu  Assign.cpp  Assign.cu  AvgPooling2d.cpp  AvgPooling2d.cu  Constant.cpp  Constant.cu  Conv2d.cpp  Conv2d.cu  CrossEntropy.cpp  CrossEntropy.cu  DeConv2d.cpp  DeConv2d.cu  Divide.cpp  Divide.cu  Dot.cpp  Dot.cu  Exp.cpp  Exp.cu  Gaussian.cpp  Gaussian.cu  L1Distance.cpp  L1Distance.cu  L1Norm.cpp  L1Norm.cu  L1NormLoss.cpp  L1NormLoss.cu  L2Distance.cpp  L2Distance.cu  (+57 more)
deep8/src/model/: AutoBatchCodeHelper.cpp  EagerExecutor.cpp  Executor.cpp  Executor.cu  Expression.cpp  GPUDevice.cu  GPUMemoryAllocator.cu  GPUMemoryPool.cu  LazyExecutor.cpp  LearningRateIterator.cpp  MemoryAllocator.cpp  MemoryPool.cpp  Net.cpp  OutputEntry.cpp  Shape.cpp  Tensor.cpp  TensorInit.cpp  TensorStorage.cpp  Trainer.cpp  Trainer.cu
deep8/src/nodes/: Abs.cpp  Abs.cu  Add.cpp  Add.cu  AddScalar.cu  AvgPooling2d.cpp  AvgPooling2d.cu  Batch.cpp  Batch.cu  Conv2d.cpp  Conv2d.cu  CrossEntropy.cpp  CrossEntropy.cu  DeConv2d.cpp  DeConv2d.cu  Divide.cpp  Divide.cu  DivideScalar.cpp  DivideScalar.cu  Dot.cpp  Exp.cpp  Exp.cu  Function.cpp  InputParameter.cpp  L1Distance.cpp  L1Norm.cpp  L1Norm.cu  L1NormLoss.cpp  L2Distance.cpp  L2Norm.cpp  L2Norm.cu  L2NormLoss.cpp  LReLu.cpp  LReLu.cu  Linear.cpp  Linear.cu  Log.cpp  Log.cu  LogSoftmax.cpp  LogSoftmax.cu  (+42 more)
deep8/src/trainer/: AdagradTrainer.cpp  AdamTrainer.cpp  ConstantLearningRateIterator.cpp  LearningRateIterator.cpp  LinearDecayLearningRateIterator.cpp  MomentumTrainer.cpp  RMSPropTrainer.cpp  SGDTrainer.cpp  Trainer.cpp  (+1 more)
deep8/utils/: CudaMathUtils.h  GPUMathUtils.h  MathUtils.h  QuantizeUtils.h  ShapeUtils.h  TensorUtils.h  Utils.h
test/: AbsTest.h  AddScalarTest.h  AddTest.h  AutoBatchTest.h  AvgPooling2dTest.h  CMakeLists.txt  CPUMemoryPoolTest.h  CompileTest.h  Conv2dTest.h  DeConv2dTest.h  Deep8Test.cpp  Deep8Test.cu  DivideScalarTest.h  DivideTest.h  DotTest.h  EigenTest.h  ExpTest.h  GPUMemoryPoolTest.h  L1NormTest.h  L2NormTest.h  LReLuTest.h  LinearRegressionGPUTest.h  LinearRegressionHalfTest.h  LinearRegressionTest.h  LinearTest.h  LogSoftmaxTest.h  LogTest.h  MatrixMultiplyTest.h  MaxPooling2dTest.h  MinusScalarTest.h  MinusTest.h  MultiplyScalarTest.h  MultiplyTest.h  PowTest.h  ReLuTest.h  ReduceMeanTest.h  ReduceSumTest.h  SigmoidTest.h  SoftmaxTest.h  SquareTest.h  (+4 more)
(+50 files in other folders)
